# veripet-dog

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DATASETS.md  REPRODUCIBILITY.md
notebooks/: 01_stanford_dogs_classification.ipynb  02_breed_error_analysis.ipynb  03_petface_dog_verification.ipynb  04_breed_verifier_filter.ipynb  05_fusion_verifier_classifier.ipynb  06_qualitative_analysis.ipynb  07_dog_classification_optuna_baselines.ipynb  08_dog_verification_loss_sweep.ipynb  README.md
paper/: supplementary_material.md
paper/ieee_article/: README.md  main.tex  references.bib
paper/presentation/: README.md  main.tex
results/: README.md
results/classification/: distribuicao_erros_top10.csv  erros_top10_racas_qualitativo.csv  label_encoder_stanford.json  metricas_por_raca_stanford.csv  top10_piores_racas.csv
results/verification/: verification_results.csv
scripts/: correlacao_verificador_classificador.py  macro_group_accuracy.py
scripts/figures/: generate_final_tcc_figures.py  generate_qualitative_figures_v2.py  generate_quant_figures_v2.py  render_svg_with_chrome.py
src/veripet/: __init__.py
src/veripet/research/: __init__.py  config.py  datasets.py  dog_classification_workflows.py  dog_verification_workflows.py  evaluation.py  heads.py  ingest.py  io.py  losses.py  metric_heads.py  metrics.py  models.py  (+5 more)
tests/research/: test_metric_heads.py  test_research_evaluation.py  test_research_factories.py  test_research_ingest.py  test_research_pairs.py  test_research_paths_and_io.py  test_research_sampling.py  test_research_taxonomy.py
